styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}

body {
    background-color: white;
}

.link {
    font-family: Avenir;
    text-decoration: none;
    color: #CF768E;
}

.inline-link {
    text-decoration: none;
    color: #CF768E;
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.icon {
    width: 100px;
    height: 100px;
    margin-right: auto;
}

.links {
    text-align: right;
    display: flex;
    margin-left: 60vw;
    margin-right: 40px;
    margin-top: 25px;
    font-size: 19px;
    font-weight: 200;
    justify-content: space-around;
    width: 5000px;
}

.header-text {
    font-family: Gurmukhi MN;
    font-weight: normal;
    color: #3A3C48;
}

.box {
    position: fixed;
    height: 60vh;
    width: 100vw;
    overflow-y: scroll;
    top: 20vh;
    background-color: #EFECEA;
    display: inline-block;
}

.project-container {
    padding-bottom: 500px;
}

.project {
    display: flex;
    flex-direction: row;
}

.project-description {
    padding-left: 20px;
}

.hey {
    font-size: 45px;
}

.text {
    font-family: Devanagari Sangam MN;
    font-size: 18px;
    color: #746759;
}

.text-container {
    margin-left: 18vw;
    margin-top: 4%;
    margin-right: 50px;
}

.intro {
    margin-top: 10px;
    margin-right: 45px;
}

.items {
    display: flex;
    flex-direction: row;
    margin-top: 5%;
    justify-content: center;
}

.index_container {
    width: 50vw;
}

.image {
    height: 175px;
    width: 175px;
    margin-top: 10px;
}

.footer {
    font-size: 12px;
    position:fixed;
   text-align: center;
   bottom:0px;
   height:30px;
   width:100%;
   padding-top: 8px;
   background-color: rgb(206, 137, 155);
   color: white;
}

.computing-pic {
    /* height: 60%; */
    width: 350px;
    text-align: center;
}

.image-wrap {
    text-align: center;
}

.white {
    height: 95vh;
    /* background-color: white; */
}

.bottom-item {
    margin-bottom: 200px;
}

.ul-contact {
    display: inline-block;
    text-align: left;
}

@media only screen and (max-width: 960px) {
    .project-container {
        padding-bottom: 200px;
    }
    
    .project {
        display: flex;
        flex-direction: column;
    }

    .box {
        background-color: white;
        height: 95%;
        width: 100%;
        text-align: center;
        top: 20vh;
        overflow-y: scroll;
    }

    .items {
        text-align: center;
        flex-direction: column-reverse;
    }

    .index_container {
        width: 100%;
        margin: 0 auto;
        overflow-y: scroll;
        margin-bottom: 150px;
    }

    .intro {
        width: 80%;
        display: inline-block;
        margin: 5vh auto;
        overflow-y: scroll;
    }

    .links {
        width: 100vw;
        text-align: center;
        margin: 30px 0;
    }
    .image {
        margin: 0 0 10px 0;
    }
    
    .text-container {
        text-align: center;
        display: inline-block;
        margin: 0;
        width: 90%;
        height: auto;
    }
    .bottom-item {
        margin-bottom: 200px;
    
    }
}

